--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,13 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{{ encore_entry_link_tags('app') }}{% endblock %}
+        <script type="text/javascript" src="{{ asset('js/jquery.min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/datatables.min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/dataTables.bootstrap5.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/sgdatatables/js/pipeline.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+        <styles type="text/css" src="{{ asset('css/datatables.min.css') }}"></styles>
+        <styles type="text/css" src="{{ asset('css/dataTables.bootstrap5.css') }}"></styles>
     </head>
     <body>
         <div class="container">
