--- a/templates/clients/add.html.twig
+++ b/templates/clients/add.html.twig
@@ -18,7 +18,7 @@
 </div>
 <div class="row">
     <div class="col">
-       {{form_row(clientForm.sexe)}}
+       {{form_row(clientForm.genre)}}
     </div>
 </div>   
 <div class="row">
