add mensuration form

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,8 +15,8 @@
         <styles type="text/css" src="{{ asset('css/dataTables.bootstrap5.css') }}"></styles>
     </head>
     <body>
-        <div class="container">
-            <div class="row justify-content-md-center gx-5">
+        <div class="container-fluid">
+            <div class="row justify-content-md-center mb-3">
                 <div class="col-10">
                     <div class="card">
                         <div class="card-body">
