add form - produit - client - type

--- a/templates/clients/mensuration.html.twig
+++ b/templates/clients/mensuration.html.twig
@@ -6,20 +6,63 @@
 
 {% block body %}
 
-<div class="row">
-    <div class="col">
-        <img class="img-fluid" src="{{ asset('images/mesuraration_'~ genre ~'.jpg') }}"/>        
+
+  <div class="row">
+    <div class="col-6">
+      <img class="img img-thumbnail" src="{{ asset('images/mesuraration_'~ genre ~'.jpg') }}"/>
     </div>
-    <div class="col">
-        <div class="row">
-            <div class="col">
-                {{ form_start(mensurationForm) }}
-                {{ form_end(mensurationForm) }}
-            </div>
+    <div class="col-6">
+        {{ form_start(mensurationForm) }}
+        <div class="row">   
+            <div class="col">{{form_row(mensurationForm.hauteurTailleSol)}}</div>
+            <div class="col">{{form_row(mensurationForm.longueurBasLegerementPlie)}}</div>
         </div>
+        <div class="row">
+            <div class="col">{{form_row(mensurationForm.hauteurEncolureSol)}}</div>
+            <div class="col">{{form_row(mensurationForm.taille)}}</div>
+        </div>
+        <div class="row">
+            <div class="col">{{form_row(mensurationForm.tourCou)}}</div>
+            <div class="col">{{form_row(mensurationForm.carrureDevant)}}</div>
+                    </div>
+        <div class="row">
+            <div class="col">{{form_row(mensurationForm.carrureDos)}}</div>
+            <div class="col">{{form_row(mensurationForm.tourTaille)}}</div>
+                    </div>
+        <div class="row">
+            <div class="col">{{form_row(mensurationForm.tourHanche)}}</div>
+            <div class="col">{{form_row(mensurationForm.tourBassin)}}</div>
+                    </div>
+        <div class="row">
+            <div class="col">{{form_row(mensurationForm.tourGenou)}}</div>
+            <div class="col">{{form_row(mensurationForm.tourCheville)}}</div>
+        </div>
+        </div>
+        <div class="row">
+            <div class="col">{{form_row(mensurationForm.hauteurEcolureTailleDevant)}}</div>
+            <div class="col">{{form_row(mensurationForm.hauteurEncolurSaillant)}}</div>
+            <div class="col">{{form_row(mensurationForm.hauteurTailleGenou)}}</div>
+            <div class="col">{{form_row(mensurationForm.tourBiceps)}}</div>
+         </div>
+        <div class="row">
+            <div class="col">{{form_row(mensurationForm.tourAvantBras)}}</div>
+            <div class="col">{{form_row(mensurationForm.tourPoignet)}}</div>
+            <div class="col">{{form_row(mensurationForm.tourCuisse)}}</div>
+            <div class="col">{{form_row(mensurationForm.tourMollet)}}</div>
+        </div>
+        <div class="row">
+                {% if genre == "femme" %}
+                    <div class="col">{{form_row(mensurationForm.hauteurEncolureTailleDos)}}</div>
+                    <div class="col">{{form_row(mensurationForm.tourPoitrine)}}</div>
+                    <div class="col">{{form_row(mensurationForm.encartSaillantPoitrine)}}</div>
+                    <div class="col">{{form_row(mensurationForm.tourSousPoitrine)}}</div>
+                {% else %}
+                    <div class="col-3">{{form_row(mensurationForm.hauteurEncolureTailleDos)}}</div>    
+                {% endif %}
+            {{ form_end(mensurationForm) }}
+        </div>
+
     </div>
-</div>
-
-
+  </div>
 
 {% endblock %}
