--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -9,9 +9,9 @@
       <a class="nav-link" href="{{ path('clients') }}">Clients</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Produits</a>
+      <a class="nav-link" href="{{ path('produits') }}">Produits</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('setting_type') }}">Settings</a>
+      <a class="nav-link" href="{{ path('settings') }}">Settings</a>
     </li>
   </ul>
