--- a/templates/settings.html.twig
+++ b/templates/settings.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" href="{{ path('setting_type') }}">Type</a>
+      <a class="nav-link active" href="{{ path('setting_types') }}">Type de produits</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Link</a>
