--- a/templates/settings.html.twig
+++ b/templates/settings.html.twig
@@ -10,7 +10,7 @@
       <a class="nav-link active" href="{{ path('setting_types') }}">Type de produits</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" href="{{ path('setting_events') }}">Evenements</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Link</a>
