--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,10 +9,14 @@
         <script type="text/javascript" src="{{ asset('js/jquery.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('js/datatables.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('js/dataTables.bootstrap5.min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/dataTables.bootstrap5.min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/dataTables.responsive.min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/responsive.bootstrap5.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/sgdatatables/js/pipeline.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
         <styles type="text/css" src="{{ asset('css/datatables.min.css') }}"></styles>
         <styles type="text/css" src="{{ asset('css/dataTables.bootstrap5.css') }}"></styles>
+        <styles type="text/css" src="{{ asset('css/responsive.bootstrap5.min.css') }}"></styles>
     </head>
     <body>
         <div class="container-fluid">
