--- a/templates/settings/events.html.twig
+++ b/templates/settings/events.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Type de Produits{% endblock %}
+{% block title %}Evenements{% endblock %}
 
-{% block titre %}Setting/Type de Produits{% endblock %}
+{% block titre %}Setting/Evenements{% endblock %}
 
 {% block body %}
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" href="{{ path('setting_types') }}">Type de produits</a>
+      <a class="nav-link" href="{{ path('setting_types') }}">Type de produits</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('setting_events') }}">Evenements</a>
+      <a class="nav-link active" href="{{ path('setting_events') }}">Evenements</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Link</a>
@@ -22,7 +22,7 @@
 </ul>
 <div class=row>
   <div class="col">
-    <a class="btn btn-primary" href="{{ path('setting_types_add') }}" role="button">ajout</a>
+    <a class="btn btn-primary" href="{{ path('setting_events_add') }}" role="button">ajout</a>
   </div>
 </div>
 <div class="row">
