--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -12,6 +12,9 @@
       <a class="nav-link" href="{{ path('produits') }}">Produits</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link" href="{{ path('events') }}">Evenements</a>
+      </li>
+    <li class="nav-item">
       <a class="nav-link" href="{{ path('settings') }}">Settings</a>
     </li>
   </ul>
