--- a/templates/settings.html.twig
+++ b/templates/settings.html.twig
@@ -7,10 +7,10 @@
 {% block body %}
 <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" href="{{ path('setting_types') }}">Type de produits</a>
+      <a class="nav-link active" href="{{ path('setting_produits') }}">Type de produits</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('setting_events') }}">Evenements</a>
+      <a class="nav-link" href="{{ path('setting_frais') }}">Type de Frais</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Link</a>
