--- a/templates/settings/frais.html.twig
+++ b/templates/settings/frais.html.twig
@@ -31,17 +31,17 @@
      <thead>
       <tr>
         <th>#</th>
-        <th>Nom</th>
-        <th>Commentaire</th>
+        <th>code</th>
+        <th>nom</th>
         <th>Action<th>
       </th>
       </thead>
       <tbody>
-        {% for type in types %}
-          <tr data-id="{{type.id}}">
-            <td>{{type.id }}</td>
-            <td>{{type.nom}}</td>
-            <td>{{type.commentaire}}</td>
+        {% for fraisType in fraisTypes %}
+          <tr data-id="{{fraisType.id}}">
+            <td>{{fraisType.id }}</td>
+            <td>{{fraisType.code}}</td>
+            <td>{{fraisType.nom}}</td>
             <td></td>
           </tr>
         {% endfor %}
