add form vente 1/2

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,14 +9,13 @@
         <script type="text/javascript" src="{{ asset('js/jquery.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('js/datatables.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('js/dataTables.bootstrap5.min.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('js/dataTables.bootstrap5.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('js/dataTables.responsive.min.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('js/responsive.bootstrap5.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/sgdatatables/js/pipeline.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
-        <styles type="text/css" src="{{ asset('css/datatables.min.css') }}"></styles>
-        <styles type="text/css" src="{{ asset('css/dataTables.bootstrap5.css') }}"></styles>
-        <styles type="text/css" src="{{ asset('css/responsive.bootstrap5.min.css') }}"></styles>
+        <link type="text/css" rel="stylesheet" href="{{ asset('css/datatables.min.css') }}"></styles>
+        <link type="text/css" rel="stylesheet" href="{{ asset('css/dataTables.bootstrap5.css') }}"></styles>
+        <link type="text/css" rel="stylesheet" href="{{ asset('css/responsive.bootstrap5.min.css') }}"></styles>
+        <link rel="stylesheet" href="{{ asset('css/font-awesome.css') }}"></styles>
     </head>
     <body>
         <div class="container-fluid">
