--- a/templates/events.html.twig
+++ b/templates/events.html.twig
@@ -12,7 +12,38 @@
 </div>
 <div class="row">
     <div class="col">
-        {# {{ sg_datatables_render(produitsDatatable) }} #}
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Event</th>
+                    <th>Lieu</th>
+                    <th>Date</th>
+                    <th>Ventes</th>
+                    <th>Frais</th>
+                    <th>Chiffres</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for event in events %}
+                <tr>
+                    <td><a href="{{ path('event_view',{id:event.id}) }}">{{event.id}}</a></td>
+                    <td>{{event.nom}}</td>
+                    <td>{{event.lieu}}</td>
+                    <td>{{event.date|date("d/m/Y")}}</td>
+                    <td>Ventes</td>
+                    <td>
+                        {% set fraisValeur = "0" %}
+                        {% for frais in event.frais %}
+                           {% set fraisValeur = fraisValeur+ frais.prix %} 
+                        {% endfor %}
+                        {{fraisValeur}} €
+                    </td>
+                    <td>Chiffres</td>
+                </tr>    
+            {% endfor %}
+        </table>    
+
     </div>
 </div>
 {% endblock %}
