--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -3,7 +3,7 @@
       <a class="nav-link" aria-current="page" href="/">Acueil</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Ventes</a>
+        <a class="nav-link" href="{{ path('ventes') }}">Ventes</a>
       </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ path('clients') }}">Clients</a>
