change languge french to english

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -3,13 +3,13 @@
       <a class="nav-link" aria-current="page" href="/">Acueil</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{{ path('ventes') }}">Ventes</a>
+        <a class="nav-link" href="{{ path('sales') }}">Sales</a>
       </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('clients') }}">Clients</a>
+      <a class="nav-link" href="{{ path('customers') }}">Customers</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('produits') }}">Produits</a>
+      <a class="nav-link" href="{{ path('products') }}">Products</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{{ path('events') }}">Evenements</a>
