--- a/templates/sales.html.twig
+++ b/templates/sales.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ventes{% endblock %}
+{% block title %}Sales{% endblock %}
 
-{% block titre %}Ventes{% endblock %}
+{% block titre %}Sales{% endblock %}
 
 {% block body %}
 <div class="row">
     <div class="col">
-        <a class="btn btn-primary" href="{{ path('vente_add') }}" role="button">ajout</a>
+        <a class="btn btn-primary" href="{{ path('sales_add') }}" role="button">ajout</a>
     </div>
 </div>
 <div class="row">
