--- a/templates/sales/salesAdd.html.twig
+++ b/templates/sales/salesAdd.html.twig
@@ -6,8 +6,8 @@
 
 {% block body %}
 
-{{ form_start(venteForm) }}
+{{ form_start(salesForm) }}
 
-{{ form_end(venteForm) }}
+{{ form_end(salesForm) }}
 
 {% endblock %}
