--- a/templates/settings.html.twig
+++ b/templates/settings.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" href="{{ path('setting_produits') }}">Type de produits</a>
+      <a class="nav-link active" href="{{ path('setting_products') }}">Type de products</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ path('setting_frais') }}">Type de Frais</a>
