--- a/templates/Customers/mensuration.html.twig
+++ b/templates/Customers/mensuration.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mensuration Client{% endblock %}
+{% block title %}Mensuration Customer{% endblock %}
 
-{% block titre %}Client/Mensuration{% endblock %}
+{% block titre %}Customer/Mensuration{% endblock %}
 
 {% block body %}
 
