--- a/templates/events.html.twig
+++ b/templates/events.html.twig
@@ -19,7 +19,7 @@
                     <th>Event</th>
                     <th>Lieu</th>
                     <th>Date</th>
-                    <th>Ventes</th>
+                    <th>Sales</th>
                     <th>Frais</th>
                     <th>Chiffres</th>
                 </tr>
@@ -31,7 +31,7 @@
                     <td>{{event.nom}}</td>
                     <td>{{event.lieu}}</td>
                     <td>{{event.date|date("d/m/Y")}}</td>
-                    <td>Ventes</td>
+                    <td>Sales</td>
                     <td>
                         {% set fraisValeur = "0" %}
                         {% for frais in event.frais %}
