--- a/templates/settings/frais.html.twig
+++ b/templates/settings/frais.html.twig
@@ -8,7 +8,7 @@
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('setting_produits') }}">Type de produits</a>
+      <a class="nav-link" href="{{ path('setting_products') }}">Type de products</a>
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="#">Type de frais</a>
