--- a/templates/settings/type.html.twig
+++ b/templates/settings/type.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Type de Produits{% endblock %}
+{% block title %}Type de Products{% endblock %}
 
-{% block titre %}Setting/Type de Produits{% endblock %}
+{% block titre %}Setting/Type de Products{% endblock %}
 
 {% block body %}
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Type de produits</a>
+      <a class="nav-link active" href="#">Type de products</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ path('setting_frais') }}">Type de frais</a>
@@ -22,7 +22,7 @@
 </ul>
 <div class=row>
   <div class="col">
-    <a class="btn btn-primary" href="{{ path('setting_produits_add') }}" role="button">ajout</a>
+    <a class="btn btn-primary" href="{{ path('setting_products_add') }}" role="button">ajout</a>
   </div>
 </div>
 <div class="row">
