--- a/templates/events/eventView.html.twig
+++ b/templates/events/eventView.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Event{% endblock %}
 
-{% block titre %}Event/Lieu{% endblock %}
+{% block titre %}Event/Location{% endblock %}
 
 {% block body %}
 
