--- a/templates/settings/typeAdd.html.twig
+++ b/templates/settings/typeAdd.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouveau Type de frais{% endblock %}
+{% block title %}New fees type{% endblock %}
 
-{% block titre %}Setting/Type/frais{% endblock %}
+{% block titre %}Setting/Type/fees{% endblock %}
 
 {% block body %}
 
-{{ form_start(fraisTypeForm) }}
+{{ form_start(typesForm) }}
 
-{{ form_end(fraisTypeForm) }}
+{{ form_end(typesForm) }}
 
 {% endblock %}
