--- a/templates/Customers/customerAdd.html.twig
+++ b/templates/Customers/customerAdd.html.twig
@@ -10,15 +10,15 @@
 
 <div class="row">
     <div class="col">
-       {{form_row(customerForm.prenom)}}
+       {{form_row(customerForm.firstName)}}
     </div>
     <div class="col">
-      {{form_row(customerForm.nom)}}
+      {{form_row(customerForm.name)}}
     </div>
 </div>
 <div class="row">
     <div class="col">
-       {{form_row(customerForm.genre)}}
+       {{form_row(customerForm.gender)}}
     </div>
 </div>   
 <div class="row">
@@ -26,20 +26,20 @@
        {{form_row(customerForm.email)}}
     </div>
     <div class="col">
-      {{form_row(customerForm.telephone)}}
+      {{form_row(customerForm.phone)}}
     </div>
 </div> 
 <div class="row">
     <div class="col">
-       {{form_row(customerForm.adresse)}}
+       {{form_row(customerForm.address)}}
     </div>
 </div>   
 <div class="row">
     <div class="col">
-       {{form_row(customerForm.codePostal)}}
+       {{form_row(customerForm.zipCode)}}
     </div>
     <div class="col">
-      {{form_row(customerForm.ville)}}
+      {{form_row(customerForm.city)}}
     </div>
 </div>   
 <div class="row">
@@ -47,7 +47,7 @@
        {{form_row(customerForm.enregistrer)}}
     </div>
     <div class="col">
-       {{form_row(customerForm.mensuration)}}
+       {{form_row(customerForm.measurement)}}
     </div>
 </div>   
 
