--- a/templates/settings.html.twig
+++ b/templates/settings.html.twig
@@ -10,7 +10,7 @@
       <a class="nav-link active" href="{{ path('setting_products') }}">Type de products</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('setting_frais') }}">Type de Frais</a>
+      <a class="nav-link" href="{{ path('setting_fees') }}">Type de Frais</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Link</a>
