fix bug french to english

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="{{ asset('bundles/sgdatatables/js/pipeline.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
         <link type="text/css" rel="stylesheet" href="{{ asset('css/datatables.min.css') }}"></styles>
-        <link type="text/css" rel="stylesheet" href="{{ asset('css/dataTables.bootstrap5.css') }}"></styles>
+        <link type="text/css" rel="stylesheet" href="{{ asset('css/dataTables.bootstrap5.min.css') }}"></styles>
         <link type="text/css" rel="stylesheet" href="{{ asset('css/responsive.bootstrap5.min.css') }}"></styles>
         <link rel="stylesheet" href="{{ asset('css/font-awesome.css') }}"></styles>
     </head>
