--- a/templates/customers/customerAdd.html.twig
+++ b/templates/customers/customerAdd.html.twig
@@ -44,7 +44,7 @@
 </div>   
 <div class="row">
     <div class="col">
-       {{form_row(customerForm.enregistrer)}}
+       {{form_row(customerForm.save)}}
     </div>
     <div class="col">
        {{form_row(customerForm.measurement)}}
