--- a/templates/settings/categoryAdd.html.twig
+++ b/templates/settings/categoryAdd.html.twig
@@ -6,8 +6,8 @@
 
 {% block body %}
 
-{{ form_start(typesForm) }}
+{{ form_start(categoriesForm) }}
 
-{{ form_end(typesForm) }}
+{{ form_end(categoriesForm) }}
 
 {% endblock %}
