--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,6 +1,6 @@
 <ul class="nav flex-column">
     <li class="nav-item">
-      <a class="nav-link" aria-current="page" href="/">Acueil</a>
+      <a class="nav-link" aria-current="page" href="/">Home</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{{ path('sales') }}">Sales</a>
@@ -12,7 +12,7 @@
       <a class="nav-link" href="{{ path('products') }}">Products</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{{ path('events') }}">Evenements</a>
+        <a class="nav-link" href="{{ path('events') }}">Evens</a>
       </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ path('settings') }}">Settings</a>
