--- a/templates/settings.html.twig
+++ b/templates/settings.html.twig
@@ -7,10 +7,10 @@
 {% block body %}
 <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" href="{{ path('setting_products') }}">Type de products</a>
+      <a class="nav-link active" href="{{ path('setting_categories') }}">Type of categories</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('setting_fees') }}">Type de Frais</a>
+      <a class="nav-link" href="{{ path('setting_fees') }}">Type of Fees</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Link</a>
