--- a/templates/settings/fees.html.twig
+++ b/templates/settings/fees.html.twig
@@ -8,7 +8,7 @@
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('setting_products') }}">Type de products</a>
+      <a class="nav-link" href="{{ path('setting_categories') }}">Type de products</a>
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="#">Type de frais</a>
@@ -37,11 +37,11 @@
       </th>
       </thead>
       <tbody>
-        {% for feesType in feesTypes %}
-          <tr data-id="{{feesType.id}}">
-            <td>{{feesType.id }}</td>
-            <td>{{feesType.code}}</td>
-            <td>{{feesType.name}}</td>
+        {% for fee in fees %}
+          <tr data-id="{{fee.id}}">
+            <td>{{fee.id }}</td>
+            <td>{{fee.code}}</td>
+            <td>{{fee.name}}</td>
             <td></td>
           </tr>
         {% endfor %}
