--- a/templates/settings/feesAdd.html.twig
+++ b/templates/settings/feesAdd.html.twig
@@ -6,8 +6,8 @@
 
 {% block body %}
 
-{{ form_start(typesForm) }}
+{{ form_start(feesForm) }}
 
-{{ form_end(typesForm) }}
+{{ form_end(feesForm) }}
 
 {% endblock %}
