fix bug trad add invoice line record add ajax controller

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -3,7 +3,7 @@
       <a class="nav-link" aria-current="page" href="/">Home</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{{ path('sales') }}">Sales</a>
+        <a class="nav-link" href="{{ path('invoices') }}">Invoices</a>
       </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ path('customers') }}">Customers</a>
