--- a/templates/events.html.twig
+++ b/templates/events.html.twig
@@ -19,7 +19,7 @@
                     <th>Event</th>
                     <th>Location</th>
                     <th>Date</th>
-                    <th>Sales</th>
+                    <th>Invoices</th>
                     <th>Frais</th>
                     <th>Chiffres</th>
                 </tr>
@@ -31,7 +31,7 @@
                     <td>{{event.name}}</td>
                     <td>{{event.location}}</td>
                     <td>{{event.date|date("d/m/Y")}}</td>
-                    <td>Sales</td>
+                    <td>Invoices</td>
                     <td>
                         {% set feesValue = "0" %}
                         {% for fees in event.fees %}
