--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -3,7 +3,13 @@
       <a class="nav-link" aria-current="page" href="/">Home</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link" href="{{ path('events') }}">Evens</a>
+      </li>
+    <li class="nav-item">
         <a class="nav-link" href="{{ path('invoices') }}">Invoices</a>
+      </li>    
+      <li class="nav-item">
+        <a class="nav-link" href="{{ path('invoices') }}">Orders</a>
       </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ path('customers') }}">Customers</a>
@@ -11,9 +17,6 @@
     <li class="nav-item">
       <a class="nav-link" href="{{ path('products') }}">Products</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{{ path('events') }}">Evens</a>
-      </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ path('settings') }}">Settings</a>
     </li>
