--- a/templates/events/eventAdd.html.twig
+++ b/templates/events/eventAdd.html.twig
@@ -14,7 +14,10 @@
             {{form_row(eventForm.name)}}
         </div>
         <div class="col">
-            {{form_row(eventForm.date)}}
+            {{form_row(eventForm.startDate)}}
+        </div>        
+        <div class="col">
+            {{form_row(eventForm.endDate)}}
         </div>
     </div>
     <div class="row">
