--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -9,7 +9,7 @@
         <a class="nav-link" href="{{ path('invoices') }}">Invoices</a>
       </li>    
       <li class="nav-item">
-        <a class="nav-link" href="{{ path('invoices') }}">Orders</a>
+        <a class="nav-link" href="{{ path('orders') }}">Orders</a>
       </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ path('customers') }}">Customers</a>
