--- a/templates/events.html.twig
+++ b/templates/events.html.twig
@@ -30,7 +30,7 @@
                     <td><a href="{{ path('event_view',{id:event.id}) }}">{{event.id}}</a></td>
                     <td>{{event.name}}</td>
                     <td>{{event.location}}</td>
-                    <td>{{event.date|date("d/m/Y")}}</td>
+                    <td>{{event.startDate|date("d/m/Y")}} - {{event.endDate|date("d/m/Y")}}</td>
                     <td>
                         {% set feesValue = "0" %}
                         {% for fees in event.fees %}
